# py-drf-react

./: .env.development  .gitignore  README.md  README_SK.md  main.py  pyproject.toml
api/: models.py  pagination.py  utils.py  views.py
api/books/: Serializers.py  models.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_book.py
backend/: settings.py  urls.py
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/components/: index.tsx
frontend/src/components/03.List/: index.tsx
frontend/src/components/04.Hooks/: index.tsx
frontend/src/components/MUI_Table/: AutoRefreshTable.tsx  PaginationSilentTable.tsx  RealApiPaginationTable.tsx  SilentRefreshTable.tsx
frontend/src/components/React19_Form/: index.tsx
frontend/src/components/React19_Suspense/: Child.tsx  SuspenseDemo.tsx  SuspenseNew.tsx
learn_semantic_kernel/: README.md  custom_plugin.py  exception_and_retry.py  full_system_architecture.py  hello.py  performance_tracking_and_logging.py  professional_agent_team.py
